INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Canny/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ImageFill/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Main/utils)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/AlgoBase)

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/Canny)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/ImageFill)

ADD_LIBRARY(AlgoBase AlgoBase.cpp)
TARGET_LINK_LIBRARIES(AlgoBase hlwCanny hlwImageFill)


ADD_EXECUTABLE(AlgoBaseTest ./test/AlgoBaseTest.cpp)
TARGET_LINK_LIBRARIES(AlgoBaseTest AlgoBase)
