INCLUDE_DIRECTORIES(./include)

FILE(GLOB CANNY_SRC "./src/*.cpp")
ADD_LIBRARY(hlwCanny STATIC ${CANNY_SRC})
TARGET_LINK_LIBRARIES(hlwCanny ${SYS_LIBS_MATLAB_NEEDED} ${MATLAB_LIBRARIES} ${VTK_LIBRARIES})


# test
INCLUDE_DIRECTORIES(./test)
ADD_EXECUTABLE(CannyTest ./test/main.cpp)
TARGET_LINK_LIBRARIES(CannyTest hlwCanny)
