INCLUDE_DIRECTORIES(./include)

FILE(GLOB CANNY_SRC "./src/*.cpp")
ADD_LIBRARY(Canny STATIC ${CANNY_SRC})
TARGET_LINK_LIBRARIES(Canny ${SYS_LIBS_MATLAB_NEEDED} ${MATLAB_LIBRARIES} ${VTK_LIBRARIES})


# test
INCLUDE_DIRECTORIES(./test)
ADD_EXECUTABLE(CannyTest ./test/main.cpp)
TARGET_LINK_LIBRARIES(CannyTest Canny)
