#FILE(GLOB MAIN_SRC_FILE "*.cpp")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Canny/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ImageFill/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/CannyAndFill/utils)

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/Canny)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/ImageFill)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/ImageFillOnlyOnePoint)

ADD_EXECUTABLE(CannyAndFill utils/HlwUtils.cpp main.cpp)
TARGET_LINK_LIBRARIES(CannyAndFill myCanny imageFill imageFillOnlyOnePoint)

#ADD_EXECUTABLE(TestMatlabFillPointID TestMatlabFillPointID.cpp)
#TARGET_LINK_LIBRARIES(TestMatlabFillPointID imageFill)
