INCLUDE_DIRECTORIES(./include)

FILE(GLOB CANNY_WITHOUT_SPACE_LIMIT_SRC_FILES "./src/*.cpp")
ADD_LIBRARY(CannyWithoutSpaceLimit STATIC ${CANNY_WITHOUT_SPACE_LIMIT_SRC_FILES})
TARGET_LINK_LIBRARIES(CannyWithoutSpaceLimit ${SYS_LIBS_MATLAB_NEEDED} ${MATLAB_LIBRARIES} ${VTK_LIBRARIES})


# test
INCLUDE_DIRECTORIES(./test)
ADD_EXECUTABLE(CannyWithoutLimit ./test/main.cpp)
TARGET_LINK_LIBRARIES(CannyWithoutLimit CannyWithoutSpaceLimit)

ADD_EXECUTABLE(CannyWithoutLimit2 ./test/main2.cpp)
TARGET_LINK_LIBRARIES(CannyWithoutLimit2 CannyWithoutSpaceLimit)
