INCLUDE_DIRECTORIES(./include)

FILE(GLOB CANNY_X_SRC_FILES "./src/*.cpp")
ADD_LIBRARY(CannyX STATIC ${CANNY_X_SRC_FILES})
TARGET_LINK_LIBRARIES(CannyX ${SYS_LIBS_MATLAB_NEEDED} ${MATLAB_LIBRARIES} ${VTK_LIBRARIES})

INCLUDE_DIRECTORIES(./test)
ADD_EXECUTABLE(CannyXTest ./test/main.cpp)
TARGET_LINK_LIBRARIES(CannyXTest CannyX)
