SET(CLASSES_NEEDED_LIBS hlwCanny hlwImageFill AlgoBase)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Canny/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ImageFill/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Main/utils)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/AlgoBase)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/OOP)

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/Canny)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/ImageFill)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/AlgoBase)

ADD_LIBRARY(hlwAlgorithms hlwAlgorithms.cpp)
TARGET_LINK_LIBRARIES(hlwAlgorithms ${CLASSES_NEEDED_LIBS})

ADD_LIBRARY(hlwPlaneAlgoritms hlwPlaneAlgorithms.cpp)
TARGET_LINK_LIBRARIES(hlwPlaneAlgoritms ${CLASSES_NEEDED_LIBS})

ADD_LIBRARY(hlwVolumeAlgorithms hlwVolumeAlgorithms.cpp)
TARGET_LINK_LIBRARIES(hlwVolumeAlgorithms ${CLASSES_NEEDED_LIBS})

ADD_LIBRARY(PlaneNeighborGrowing PlaneNeighborGrowing.cpp)
TARGET_LINK_LIBRARIES(PlaneNeighborGrowing ${CLASSES_NEEDED_LIBS})

ADD_LIBRARY(CannyDetect CannyDetect.cpp)
TARGET_LINK_LIBRARIES(CannyDetect ${CLASSES_NEEDED_LIBS})

ADD_LIBRARY(hlwImageFillh hlwImageFill.cpp)
TARGET_LINK_LIBRARIES(hlwImageFillh ${CLASSES_NEEDED_LIBS})

ADD_LIBRARY(hlwImageMath hlwImageMath.cpp)
TARGET_LINK_LIBRARIES(hlwImageMath ${CLASSES_NEEDED_LIBS})
