SET(CLASSES_NEEDED_LIBS Canny ImageFill)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Canny/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ImageFill/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Classes)

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/Canny)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/ImageFill)

ADD_LIBRARY(hlwAlgorithms hlwAlgorithms.cpp)
TARGET_LINK_LIBRARIES(hlwAlgorithms ${CLASSES_NEEDED_LIBS})

ADD_LIBRARY(hlwPlaneAlgorithms hlwPlaneAlgorithms.cpp)
TARGET_LINK_LIBRARIES(hlwPlaneAlgorithms ${CLASSES_NEEDED_LIBS})

ADD_LIBRARY(hlwVolumeAlgorithms hlwVolumeAlgorithms.cpp)
TARGET_LINK_LIBRARIES(hlwVolumeAlgorithms ${CLASSES_NEEDED_LIBS})

ADD_LIBRARY(PlaneNeighborGrowing PlaneNeighborGrowing.cpp)
TARGET_LINK_LIBRARIES(PlaneNeighborGrowing ${CLASSES_NEEDED_LIBS})

ADD_LIBRARY(CannyDetect CannyDetect.cpp)
TARGET_LINK_LIBRARIES(CannyDetect ${CLASSES_NEEDED_LIBS})

ADD_LIBRARY(hlwImageFill hlwImageFill.cpp)
TARGET_LINK_LIBRARIES(hlwImageFill ${CLASSES_NEEDED_LIBS})

ADD_LIBRARY(hlwImageMath hlwImageMath.cpp)
TARGET_LINK_LIBRARIES(hlwImageMath ${CLASSES_NEEDED_LIBS})

ADD_LIBRARY(hlwImageSlice hlwImageSlice.cpp)
TARGET_LINK_LIBRARIES(hlwImageSlice ${CLASSES_NEEDED_LIBS})

ADD_LIBRARY(BreakPointConnected BreakPointConnected.cpp)
TARGET_LINK_LIBRARIES(BreakPointConnected ${CLASSES_NEEDED_LIBS})

ADD_LIBRARY(CircleDelete CircleDelete.cpp)
TARGET_LINK_LIBRARIES(CircleDelete ${CLASSES_NEEDED_LIBS})
