INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ImageFill/include)
FILE(GLOB IMAGE_FILL_ONLY_ONE_POINT_SRC "./src/*.cpp")
ADD_LIBRARY(imageFillOnlyOnePoint STATIC ${IMAGE_FILL_ONLY_ONE_POINT_SRC})
TARGET_LINK_LIBRARIES(imageFillOnlyOnePoint ${SYS_LIBS_MATLAB_NEEDED} ${MATLAB_LIBRARIES} ${VTK_LIBRARIES})

# For Test
INCLUDE_DIRECTORIES(EXAMPLES/MAIN.H)
ADD_EXECUTABLE(ImageFillOnlyOnePoint_Test examples/main.cpp)
TARGET_LINK_LIBRARIES(ImageFillOnlyOnePoint_Test imageFillOnlyOnePoint )

