INCLUDE_DIRECTORIES(./include)
FILE(GLOB IMAGE_FILL_X_SRC_FILES "./src/*.cpp")
ADD_LIBRARY(ImageFillX STATIC ${IMAGE_FILL_X_SRC_FILES})
TARGET_LINK_LIBRARIES(ImageFillX ${SYS_LIBS_MATLAB_NEEDED} ${MATLAB_LIBRARIES} ${VTK_LIBRARIES})

INCLUDE_DIRECTORIES(./test)
ADD_EXECUTABLE(ImageFill_X_Test ./test/main.cpp)
TARGET_LINK_LIBRARIES(ImageFill_X_Test ImageFillX)
