#FILE(GLOB MAIN_SRC_FILE "*.cpp")
SET(OOP_NEEDED_LIBS hlwCanny hlwImageFill AlgoBase)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Canny/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ImageFill/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Main/utils)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/AlgoBase)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/OOP)

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/Canny)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/ImageFill)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/AlgoBase)

ADD_EXECUTABLE(Slice100 Slice100.cpp)
TARGET_LINK_LIBRARIES(Slice100 ${OOP_NEEDED_LIBS})

ADD_EXECUTABLE(Generate3d Generate3d.cpp)
TARGET_LINK_LIBRARIES(Generate3d ${OOP_NEEDED_LIBS})

