FILE(GLOB MAIN_SRC_FILE "*.cpp")

INCLUDE_DIRECTORIES(./include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Canny/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ImageFill/include)

LINK_LIBRARIES(${PROJECT_BINARY_DIR}/Canny)
LINK_LIBRARIES(${PROJECT_BINARY_DIR}/ImageFill)

ADD_EXECUTABLE(imfillTest ${MAIN_SRC_FILE})
TARGET_LINK_LIBRARIES(imfillTest imageFill)
